--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+  <!-- git commit -a -m "message" -->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,15 +13,15 @@
 <body>
   
 <container>
-  <div class="card"><h1>hello word</h1></div>
-  <div class="card"><h1>hello word</h1></div>
-  <div class="card"><h1>hello word</h1></div>
-  <div class="card"><h1>hello word</h1></div>
-  <div class="card"><h1>hello word</h1></div>
-  <div class="card"><h1>hello word</h1></div>
-  <div class="card"><h1>hello word</h1></div>
-  <div class="card"><h1>hello word</h1></div>
-  <div class="card"><h1>hello word</h1></div>
+  <div class="card"><h1>Coming soon!</h1></div>
+  <div class="card"><h1>Coming soon!</h1></div>
+  <div class="card"><h1>Coming soon!</h1></div>
+  <div class="card"><h1>Coming soon!</h1></div>
+  <div class="card"><h1>Coming soon!</h1></div>
+  <div class="card"><h1>Coming soon!</h1></div>
+  <div class="card"><h1>Coming soon!</h1></div>
+  <div class="card"><h1>Coming soon!</h1></div>
+  <div class="card"><h1>Coming soon!</h1></div>
 </container>
 </body>
 
