--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 <body>
   
 <container>
-  <div class="card"><h1>Coming soon!</h1></div>
-  <div class="card"><h1>Coming soon!</h1></div>
-  <div class="card"><h1>Coming soon!</h1></div>
-  <div class="card"><h1>Coming soon!</h1></div>
-  <div class="card"><h1>Coming soon!</h1></div>
-  <div class="card"><h1>Coming soon!</h1></div>
-  <div class="card"><h1>Coming soon!</h1></div>
-  <div class="card"><h1>Coming soon!</h1></div>
-  <div class="card"><h1>Coming soon!</h1></div>
+  <div class="card" data-tooltip="This is a tooltip"><h1>Coming soon!</h1></div>
+  <div class="card" data-tooltip="This is a tooltip"><h1>Coming soon!</h1></div>
+  <div class="card" data-tooltip="This is a tooltip"><h1>Coming soon!</h1></div>
+  <div class="card" data-tooltip="This is a tooltip"><h1>Coming soon!</h1></div>
+  <div class="card" data-tooltip="This is a tooltip"><h1>Coming soon!</h1></div>
+  <div class="card" data-tooltip="This is a tooltip"><h1>Coming soon!</h1></div>
+  <div class="card" data-tooltip="This is a tooltip"><h1>Coming soon!</h1></div>
+  <div class="card" data-tooltip="This is a tooltip"><h1>Coming soon!</h1></div>
+  <div class="card" data-tooltip="This is a tooltip"><h1>Coming soon!</h1></div>
 </container>
 </body>
 
