--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div class="intro">
     <h1 class="animate-bottom">
-      hello my name is Devin
+      hello my name is Devin <i class="fa-solid fa-user-astronaut"></i>
     </h1>
     <br><br><br>
     <button class="animate-button" onclick="scrollBy100vh()" >check out my projects</button>
