--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
 
 <body>
   <nav class="navbar">
+    <img src="../images/White_Globe_Icon.png" style="width: 50px; padding-left: 2%; cursor: pointer; "  onclick="location.reload()" alt="">
     <ul class="nav-list">
       <li class="nav-item" onclick="scrollBy100vh()" ><a href="#">01. about</a></li>
       <li class="nav-item" onclick="sendEmail()"><a href="#">02. contact</a></li>
@@ -26,7 +27,7 @@
     </h1>
     
     <p>I am a <span class="highlight-word">software engineer</span> with a passion in front-end. I like to create <br>user-friendly interfaces,  
-      and designing intuitive and visually appealing apps.</p>
+      and designing intuitive and visually appealing <span class="highlight-word underline-word" onclick="scrollBy200vh()">apps</span>.</p>
 
     
     <button class="animate-button" onclick="scrollBy200vh()" >check out my projects</button>
@@ -35,7 +36,7 @@
 
   <div class="about-me hidden">
 		<div class="about-me-content">
-			<h1>About Me</h1>
+			<h1>about Me</h1>
       <br>
 			<p>Hi there! My name is Devin and I enjoy creating things, whether it's drawings, websites, or food recipes. Recently, 
         I've developed an interest in web development and started working on my own small website projects. I found it to be 
@@ -46,12 +47,12 @@
         knowledge by learning new technologies every day.
       </p>
 		</div>
-    <div class="img-border">
+    <div class="img-border" >
       <img src="../images/pfp.jpg" alt="">
     </div>
   </div>
 
-
+  <h1 class="section-header hidden">projects</h1>
   <container class="hidden">
 
     <div class="card" data-tooltip="Recipe App">
