--- a/src/index.html
+++ b/src/index.html
@@ -150,10 +150,13 @@
   <div class="email-zone">
    
     <h1>get in touch</h1>
-    <p>i am currently looking for new opportunities, my inbox is always open. you can drop by if you have a question or just want to say hi, i will try my best and get back to you</p>
+    <p>i am currently looking for new opportunities, my inbox is always open. you can drop by if you have a question, project ideas or even if you just want to say hi, i will try my best and get back to you</p>
     <button class="email-button" onclick="sendEmail()">Send Email</button>
   </div>
  
+  <div class="signature">
+    <h3>designed & built by Devin Lin</h3>
+  </div>
 
 
   <section>
