--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Devin's Porfolio</title>
-  <link rel="stylesheet" href="./style.css">
-  <script src="./script.js" defer></script>
+  <link rel="stylesheet" href="style.css">
+  <script src="script.js" defer></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -15,7 +15,7 @@
 
 <body>
   <nav class="navbar">
-    <img src="../images/White_Globe_Icon.png" style="width: 50px; padding-left: 2%; cursor: pointer; "
+    <img src="./images/White_Globe_Icon.png" style="width: 50px; padding-left: 2%; cursor: pointer; "
       onclick="location.reload()" alt="">
     <ul class="nav-list">
       <li class="nav-item" onclick="scrollBy100vh()"><a href="#">01. about</a></li>
@@ -56,7 +56,7 @@
       </p>
     </div>
     <div class="img-border">
-      <img src="../images/pfp.jpg" alt="">
+      <img src="./images/pfp.jpg" alt="">
     </div>
   </div>
 
@@ -67,7 +67,7 @@
       <a href="https://htmlpreview.github.io/?https://github.com/thisisnotdevin/summer-projects/blob/main/recipe-app/index.html"
         target="_blank">
         <div class="card-description">
-          <img src="../images/recipeBanner.png">
+          <img src="./images/recipeBanner.png">
 
           <p>this is my recipe website so you can find fun things to cook instead of eating out so often</p>
         </div>
@@ -78,7 +78,7 @@
       <a href="https://htmlpreview.github.io/?https://github.com/thisisnotdevin/summer-projects/blob/main/movie-app/index.html"
         target="_blank">
         <div class="card-description">
-          <img src="../images/movieBanner.png">
+          <img src="./images/movieBanner.png">
 
           <p>this is my website to show trending movies and what it is about, unfortunally you can't watch them here</p>
         </div>
@@ -89,7 +89,7 @@
       <a href="https://htmlpreview.github.io/?https://github.com/thisisnotdevin/summer-projects/blob/master/quiz-app/index.html"
         target="_blank">
         <div class="card-description">
-          <img src="../images/quizBanner.png">
+          <img src="./images/quizBanner.png">
 
           <p>this is a quiz website, you can make your own quiz and test your friends</p>
         </div>
@@ -99,7 +99,7 @@
     <div class="card" data-tooltip="Covid-19 Tracker">
       <a href="https://devin-covid-tracker.netlify.app/" target="_blank">
         <div class="card-description">
-          <img src="../images/covidBanner.png">
+          <img src="./images/covidBanner.png">
 
           <p>this is a covid tracking website, it tracks the covid recoveries, death, and cases</p>
         </div>
@@ -110,7 +110,7 @@
       <a href="https://htmlpreview.github.io/?https://github.com/Ed-ward239/Project/blob/main/src/index.html"
         target="_blank">
         <div class="card-description">
-          <img src="../images/tipcalculator.png">
+          <img src="./images/tipcalculator.png">
 
           <p>this calculates how much you have to tip, pay, and venmo/paypal your friends</p>
         </div>
@@ -120,7 +120,7 @@
     <div class="card" data-tooltip="College Game">
       <a href="https://thisisnotdevin.itch.io/group-2-how-to-survive-college" target="_blank">
         <div class="card-description">
-          <img src="../images/college.png">
+          <img src="./images/college.png">
 
           <p>game designed to test your abilities of survival</p>
         </div>
@@ -130,7 +130,7 @@
     <div class="card" data-tooltip="NYC event website">
       <a href="https://nyc-checklist.netlify.app/src/components/trending.html" target="_blank">
         <div class="card-description">
-          <img src="../images/nyccheck.png">
+          <img src="./images/nyccheck.png">
 
           <p>allows users to browse trending events in NYC</p>
         </div>
