fixed phone view

--- a/index.html
+++ b/index.html
@@ -14,15 +14,18 @@
 </head>
 
 <body>
+  
   <nav class="navbar">
     <img src="./images/White_Globe_Icon.png" style="width: 50px; padding-left: 2%; cursor: pointer; "
       onclick="location.reload()" alt="">
+      
     <ul class="nav-list">
       <li class="nav-item" onclick="scrollBy100vh()"><a href="#">01. about</a></li>
       <li class="nav-item" onclick="sendEmail()"><a href="#">02. contact</a></li>
       <li class="nav-item" onclick="scrollToBottom()"><a href="#">03. socials</a></li>
       <li class="nav-item btn-box" onclick="openPDF()"><a href="#">04. resume</a></li>
     </ul>
+    
   </nav>
   <div class="intro">
     <h1 class="animate-bottom">
@@ -49,8 +52,7 @@
         to be
         an enjoyable experience!
 
-        <br><br> I'm constantly striving to learn new things every day to enhance the speed, smoothness, and
-        visual appeal of my creations. Currently, I have experience in HTML/CSS and JavaScript, but I'm looking to
+        <br><br>Currently, I have experience in HTML/CSS and JavaScript, but I'm looking to
         expand my
         knowledge by learning new technologies every day.
       </p>
@@ -181,7 +183,7 @@
             class="fab fa-linkedin-in"></i></a>
       </li>
       </ul>
-      </section>
+    </section>
 
 </body>
 
