--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 <body>
   
+  
   <nav class="navbar">
     <img src="./images/White_Globe_Icon.png" style="width: 50px; padding-left: 2%; cursor: pointer; "
       onclick="location.reload()" alt="">
@@ -63,7 +64,7 @@
   </div>
 
   <h1 class="section-header hidden">projects</h1>
-  <container class="hidden">
+  <container id="my-container" class="hidden">
 
     <div class="card" data-tooltip="Recipe App">
       <a href="https://htmlpreview.github.io/?https://github.com/thisisnotdevin/summer-projects/blob/main/recipe-app/index.html"
@@ -184,6 +185,8 @@
       </li>
       </ul>
     </section>
+    
+    <button id="scroll-to-top-btn"><i class="fas fa-solid fa-square-caret-up"></i></button>
 
 </body>
 
