--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   
   
   <nav class="navbar">
-    <img src="./images/White_Globe_Icon.png" style="width: 50px; padding-left: 2%; cursor: pointer; "
+    <img src="./images/White_Globe_Icon.png" style="width: 50px; padding-left: 2%; cursor: pointer;"
       onclick="location.reload()" alt="">
       
     <ul class="nav-list">
@@ -140,8 +140,8 @@
       </a>
     </div>
 
-    <div class="card" data-tooltip="This is a tooltip"">
-      <h1>Coming soon</h1>
+    <div class="card" data-tooltip="light/dark mode" onclick="toggleMode()">
+      <h1>light & dark mode</h1>
     </div>
 
     <div class=" card" data-tooltip="This is a tooltip"">
@@ -151,10 +151,11 @@
 
   </container >
   <div class="email-zone">
-   
+   <div class="email-zone-container">
     <h1>get in touch</h1>
     <p>i am currently looking for new opportunities, my inbox is always open. you can drop by if you have a question, project ideas or even if you just want to say hi, i will try my best and get back to you</p>
     <button class="email-button" onclick="sendEmail()">Send Email</button>
+  </div>
   </div>
  
   <div class="signature">
