--- a/index.html
+++ b/index.html
@@ -15,7 +15,16 @@
 
 <body>
   
-  
+  <div id="loader" class="spinner" >
+    
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    </div>
+  <div id="website">
   <nav class="navbar">
     <img src="./images/White_Globe_Icon.png" style="width: 50px; padding-left: 2%; cursor: pointer;"
       onclick="location.reload()" alt="">
@@ -188,7 +197,7 @@
     </section>
     
     <button id="scroll-to-top-btn"><i class="fas fa-solid fa-square-caret-up"></i></button>
-
+  </div>  
 </body>
 
 </html>
