--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
       onclick="location.reload()" alt="">
       
     <ul class="nav-list">
-      <li class="nav-item" onclick="scrollBy100vh()"><a href="#">01. about</a></li>
-      <li class="nav-item" onclick="sendEmail()"><a href="#">02. contact</a></li>
-      <li class="nav-item" onclick="scrollToBottom()"><a href="#">03. socials</a></li>
-      <li class="nav-item btn-box" onclick="openPDF()"><a href="#">04. resume</a></li>
+      <li class="nav-item" onclick="scrollBy100vh()"><a href="#">01. About</a></li>
+      <li class="nav-item" onclick="sendEmail()"><a href="#">02. Contact</a></li>
+      <li class="nav-item" onclick="scrollToBottom()"><a href="#">03. Socials</a></li>
+      <li class="nav-item btn-box" onclick="openPDF()"><a href="#">04. Resume</a></li>
     </ul>
     
   </nav>
   <div class="intro">
     <h1 class="animate-bottom">
-      hello my name is <span class="highlight-word">Devin.</span>
+      Hello my name is <span class="highlight-word">Devin.</span>
     </h1>
 
     <p>I am a <span class="highlight-word">software engineer</span> with a passion in front-end. I like to create
@@ -48,13 +48,13 @@
         onclick="scrollBy200vh()">apps</span>.</p>
 
 
-    <button class="animate-button" onclick="scrollBy200vh()">check out my projects</button>
+    <button class="animate-button" onclick="scrollBy200vh()">Check out my projects</button>
   </div>
 
 
   <div class="about-me hidden">
     <div class="about-me-content">
-      <h1>about Me</h1>
+      <h1>About Me</h1>
       <br>
       <p>Hi there! My name is Devin and I enjoy creating things, whether it's drawings, websites, or food recipes.
         Recently,
@@ -72,7 +72,7 @@
     </div>
   </div>
 
-  <h1 class="section-header hidden">projects</h1>
+  <h1 class="section-header hidden">Projects</h1>
   <container id="my-container" class="hidden">
 
     <div class="card" data-tooltip="Recipe App">
@@ -81,7 +81,7 @@
         <div class="card-description">
           <img src="./images/recipeBanner.png">
 
-          <p>this is my recipe website so you can find fun things to cook instead of eating out so often</p>
+          <p>This is my recipe website so you can find fun things to cook instead of eating out so often</p>
         </div>
       </a>
     </div>
@@ -92,7 +92,7 @@
         <div class="card-description">
           <img src="./images/movieBanner.png">
 
-          <p>this is my website to show trending movies and what it is about, unfortunally you can't watch them here</p>
+          <p>This is my website to show trending movies and what it is about, unfortunally you can't watch them here</p>
         </div>
       </a>
     </div>
@@ -103,7 +103,7 @@
         <div class="card-description">
           <img src="./images/quizBanner.png">
 
-          <p>this is a quiz website, you can make your own quiz and test your friends</p>
+          <p>This is a quiz website, you can make your own quiz and test your friends</p>
         </div>
       </a>
     </div>
@@ -113,7 +113,7 @@
         <div class="card-description">
           <img src="./images/covidBanner.png">
 
-          <p>this is a covid tracking website, it tracks the covid recoveries, death, and cases</p>
+          <p>This is a covid tracking website, it tracks the covid recoveries, death, and cases</p>
         </div>
       </a>
     </div>
@@ -124,7 +124,7 @@
         <div class="card-description">
           <img src="./images/tipcalculator.png">
 
-          <p>this calculates how much you have to tip, pay, and venmo/paypal your friends</p>
+          <p>This calculates how much you have to tip, pay, and venmo/paypal your friends</p>
         </div>
       </a>
     </div>
@@ -134,7 +134,7 @@
         <div class="card-description">
           <img src="./images/college.png">
 
-          <p>game designed to test your abilities of survival</p>
+          <p>Game designed to test your abilities of survival</p>
         </div>
       </a>
     </div>
@@ -144,13 +144,13 @@
         <div class="card-description">
           <img src="./images/nyccheck.png">
 
-          <p>allows users to browse trending events in NYC</p>
+          <p>Allows users to browse trending events in NYC</p>
         </div>
       </a>
     </div>
 
     <div class="card" data-tooltip="light/dark mode" onclick="toggleMode()">
-      <h1>light & dark mode</h1>
+      <h1>Light & dark mode</h1>
     </div>
 
     <div class=" card" data-tooltip="This is a tooltip"">
