--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   
-  <div id="loader" class="spinner" >
+  <!-- <div id="loader" class="spinner" > -->
     
     <div></div>
     <div></div>
@@ -24,7 +24,7 @@
     <div></div>
     <div></div>
     </div>
-  <div id="website">
+  <!-- <div id="website"> -->
   <nav class="navbar">
     <img src="./images/White_Globe_Icon.png" style="width: 50px; padding-left: 2%; cursor: pointer;"
       onclick="location.reload()" alt="">
@@ -54,17 +54,25 @@
 
   <div class="about-me hidden">
     <div class="about-me-content">
-      <h1>About Me</h1>
+      <h1>About me</h1>
       <br>
-      <p>Hi there! My name is Devin and I enjoy creating things, whether it's drawings, websites, or food recipes.
+      <p>Hi, my name is Devin and I enjoy creating things, whether it's drawings, websites, or food recipes.
         Recently,
-        I've developed an interest in web development and started working on my own small website projects. I found it
+        One of my hobbies is web development and I started working on small website projects. I found it
         to be
         an enjoyable experience!
-
-        <br><br>Currently, I have experience in HTML/CSS and JavaScript, but I'm looking to
-        expand my
-        knowledge by learning new technologies every day.
+        <br>
+        <br>
+        <br>
+        <h1>Technologies</h1>
+        <br>
+        <ul class="technologies">
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>React.js</li>
+          <li>Python</li>
+        </ul>
       </p>
     </div>
     <div class="img-border">
@@ -161,14 +169,14 @@
   </container >
   <div class="email-zone">
    <div class="email-zone-container">
-    <h1>get in touch</h1>
-    <p>i am currently looking for new opportunities, my inbox is always open. you can drop by if you have a question, project ideas or even if you just want to say hi, i will try my best and get back to you</p>
+    <h1>Get in touch</h1>
+    <p>I am currently looking for new opportunities, my inbox is always open. you can drop by if you have a question, project ideas or even if you just want to say hi, i will try my best and get back to you</p>
     <button class="email-button" onclick="sendEmail()">Send Email</button>
   </div>
   </div>
  
   <div class="signature">
-    <h3>designed & built by Devin Lin</h3>
+    <h3>Designed & built by Devin Lin</h3>
   </div>
 
 
