--- a/index.html
+++ b/index.html
@@ -169,14 +169,17 @@
   </container >
   <div class="email-zone">
    <div class="email-zone-container">
+    
     <h1>Get in touch</h1>
     <p>I am currently looking for new opportunities, my inbox is always open. you can drop by if you have a question, project ideas or even if you just want to say hi, i will try my best and get back to you</p>
+    
     <button class="email-button" onclick="sendEmail()">Send Email</button>
   </div>
   </div>
  
   <div class="signature">
-    <h3>Designed & built by Devin Lin</h3>
+    <h3>Designed & built by Devin Lin. Deployed on <span class="highlight-word underline-word"
+      onclick="scrollBy200vh()">Netlify</span></h3>
   </div>
 
 
