--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
   </nav>
   <div class="intro">
     <h1 class="animate-bottom">
-      Hello my name is <span class="highlight-word">Devin.</span>
+      Hello my name is <span class="highlight-word" style=" font-family: 'Merriweather', serif;">Devin.</span>
     </h1>
 
-    <p>I am a <span class="highlight-word">software engineer</span> with a passion in front-end. I like to create
+    <p>I am a <span class="highlight-word"  style=" font-family: 'Merriweather', serif;">software engineer</span> with a passion in front-end. I like to create
       <br>user-friendly interfaces,
       and designing intuitive and visually appealing <span class="highlight-word underline-word"
         onclick="scrollBy200vh()">apps</span>.</p>
@@ -158,7 +158,7 @@
     </div>
 
     <div class="card" data-tooltip="light/dark mode" onclick="toggleMode()">
-      <h1>Light & dark mode</h1>
+      <h1>Theme changer</h1>
     </div>
 
     <div class=" card" data-tooltip="This is a tooltip"">
@@ -178,7 +178,7 @@
   </div>
  
   <div class="signature">
-    <h3>Designed & built by Devin Lin. Deployed on <span class="highlight-word underline-word"
+    <h3>Designed & built by Devin Lin. Deployed on <span class="highlight-word underline-word"  style=" font-family: 'Merriweather', serif;"
       onclick="scrollBy200vh()">Netlify</span></h3>
   </div>
 
