--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div class="card-description">
           <img src="./images/recipeBanner.png">
 
-          <p>This is my recipe website so you can find fun things to cook instead of eating out so often</p>
+          <p>This recipe website aims to inspire people to cook more often, instead of eating out</p>
         </div>
       </a>
     </div>
@@ -100,7 +100,7 @@
         <div class="card-description">
           <img src="./images/movieBanner.png">
 
-          <p>This is my website to show trending movies and what it is about, unfortunally you can't watch them here</p>
+          <p>Displays information about currently popular movies, along with a synopsis of their plots</p>
         </div>
       </a>
     </div>
@@ -111,7 +111,7 @@
         <div class="card-description">
           <img src="./images/quizBanner.png">
 
-          <p>This is a quiz website, you can make your own quiz and test your friends</p>
+          <p>Quiz platform that lets users create their own quizzes and challenge others</p>
         </div>
       </a>
     </div>
@@ -142,7 +142,7 @@
         <div class="card-description">
           <img src="./images/college.png">
 
-          <p>Game designed to test your abilities of survival</p>
+          <p>Game designed to test your abilities of survival in college</p>
         </div>
       </a>
     </div>
@@ -152,7 +152,7 @@
         <div class="card-description">
           <img src="./images/nyccheck.png">
 
-          <p>Allows users to browse trending events in NYC</p>
+          <p>This website enables users to explore the latest popular events taking place in NYC</p>
         </div>
       </a>
     </div>
@@ -171,7 +171,7 @@
    <div class="email-zone-container">
     
     <h1>Get in touch</h1>
-    <p>I am currently looking for new opportunities, my inbox is always open. you can drop by if you have a question, project ideas or even if you just want to say hi, i will try my best and get back to you</p>
+    <p>I am currently looking for new opportunities, my inbox is always open. You can drop by if you have a question, project ideas or even if you just want to say hi, I will try my best and get back to you</p>
     
     <button class="email-button" onclick="sendEmail()">Send Email</button>
   </div>
