--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <button class="animate-button" onclick="scrollBy200vh()">Check out my projects</button>
   </div>
 
-
+<div class="about-me-container">
   <div class="about-me hidden">
     <div class="about-me-content">
       <h1>About me</h1>
@@ -79,7 +79,8 @@
       <img src="./images/pfp.jpg" alt="">
     </div>
   </div>
-
+</div>
+<div class="cards-container">
   <h1 class="section-header hidden">Projects</h1>
   <container id="my-container" class="hidden">
 
@@ -167,6 +168,7 @@
 
 
   </container >
+</div>
   <div class="email-zone">
    <div class="email-zone-container">
     
@@ -189,8 +191,7 @@
         <a href="#" onclick="sendEmail()" class="icon-link"><i class="fa-solid fa-envelope"></i></a>
       </li>
       <li class="icon-item">
-        <a href="https://www.goodreads.com/user/show/50444234-devin-lin" class="icon-link" target="_blank"><i
-            class="fa-brands fa-goodreads"></i></a>
+        <a href="https://codepen.io/thisisnotdevin" class="icon-link" target="_blank"><i class="fa-brands fa-codepen"></i></a>
       </li>
       <li class="icon-item">
         <a href="https://www.hackerrank.com/devin1299" class="icon-link" target="_blank"><i
