--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   
-  <!-- <div id="loader" class="spinner" > -->
+  <div id="loader" class="spinner" >
     
     <div></div>
     <div></div>
@@ -24,7 +24,7 @@
     <div></div>
     <div></div>
     </div>
-  <!-- <div id="website"> -->
+  <div id="website">
   <nav class="navbar">
     <img src="./images/White_Globe_Icon.png" style="width: 50px; padding-left: 2%; cursor: pointer;"
       onclick="location.reload()" alt="">
@@ -162,7 +162,7 @@
       <h1>Theme changer</h1>
     </div>
 
-    <div class=" card" data-tooltip="This is a tooltip"">
+    <div class="card" data-tooltip="This is a tooltip">
       <h1>Coming soon</h1>
     </div>
 
