--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
   </container >
 </div>
-  <div class="email-zone">
+  <div class="email-zone hidden">
    <div class="email-zone-container">
     
     <h1>Get in touch</h1>
