--- a/index.html
+++ b/index.html
@@ -26,13 +26,22 @@
     </div>
   <div id="website">
   <nav class="navbar">
-    <img src="./images/White_Globe_Icon.png" style="width: 50px; padding-left: 2%; cursor: pointer;"
-      onclick="location.reload()" alt="">
+    <div class="letter-d" style="width: 50px; padding-left: 2%; cursor: pointer;" onclick="location.reload()" >
+      <span>D</span>
+    </div>
+    <!-- <img src="./images/White_Globe_Icon.png" style="width: 50px; padding-left: 2%; cursor: pointer;"
+      onclick="location.reload()" alt=""> -->
       
     <ul class="nav-list">
       <li class="nav-item" onclick="scrollBy100vh()"><a href="#">01. About</a></li>
       <li class="nav-item" onclick="sendEmail()"><a href="#">02. Contact</a></li>
       <li class="nav-item" onclick="scrollToBottom()"><a href="#">03. Socials</a></li>
+      <div class="toggle-switch" >
+        <label class="switch">
+          <input type="checkbox"onclick="toggleMode()">
+          <span class="slider"></span>
+        </label>
+      </div>  
       <li class="nav-item btn-box" onclick="openPDF()"><a href="#">04. Resume</a></li>
     </ul>
     
