added menu for phone

--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
   </div>
 
 <div class="about-me-container">
-  <div class="about-me hidden">
-    <div class="about-me-content">
+  <div class="about-me">
+    <div class="about-me-content hidden">
       <h1>About me</h1>
       <br>
-      <p>Hi, my name is Devin and I enjoy creating things, whether it's drawings, websites, or food recipes.
+      <p>I enjoy creating things, whether it's drawings, websites, or food recipes.
         Recently,
         One of my hobbies is web development and I started working on small website projects. I found it
         to be
@@ -90,7 +90,7 @@
         </ul>
       </p>
     </div>
-    <div class="img-border">
+    <div class="img-border hidden2">
       <img src="./images/pfp.jpg" alt="">
     </div>
   </div>
@@ -99,7 +99,7 @@
   <h1 class="section-header hidden">Projects</h1>
   <container id="my-container" class="hidden">
 
-    <div class="card" data-tooltip="Recipe App">
+    <div class="card " data-tooltip="Recipe App">
       <a href="https://htmlpreview.github.io/?https://github.com/thisisnotdevin/summer-projects/blob/main/recipe-app/index.html"
         target="_blank">
         <div class="card-description">
@@ -132,7 +132,7 @@
       </a>
     </div>
 
-    <div class="card" data-tooltip="Covid-19 Tracker">
+    <div class="card hidden" data-tooltip="Covid-19 Tracker">
       <a href="https://devin-covid-tracker.netlify.app/" target="_blank">
         <div class="card-description">
           <img src="./images/covidBanner.png">
@@ -142,7 +142,7 @@
       </a>
     </div>
 
-    <div class="card" data-tooltip="Tips Calculator">
+    <div class="card hidden" data-tooltip="Tips Calculator">
       <a href="https://htmlpreview.github.io/?https://github.com/Ed-ward239/Project/blob/main/src/index.html"
         target="_blank">
         <div class="card-description">
@@ -153,7 +153,7 @@
       </a>
     </div>
 
-    <div class="card" data-tooltip="College Game">
+    <div class="card hidden" data-tooltip="College Game">
       <a href="https://thisisnotdevin.itch.io/group-2-how-to-survive-college" target="_blank">
         <div class="card-description">
           <img src="./images/college.png">
@@ -163,7 +163,7 @@
       </a>
     </div>
 
-    <div class="card" data-tooltip="NYC event website">
+    <div class="card hidden2" data-tooltip="NYC event website">
       <a href="https://nyc-checklist.netlify.app/src/components/trending.html" target="_blank">
         <div class="card-description">
           <img src="./images/nyccheck.png">
@@ -173,11 +173,11 @@
       </a>
     </div>
 
-    <div class="card" data-tooltip="This is a tooltip">
+    <div class="card hidden2" data-tooltip="This is a tooltip">
       <h1>Coming soon</h1>
     </div>
 
-    <div class="card" data-tooltip="This is a tooltip">
+    <div class="card hidden2" data-tooltip="This is a tooltip">
       <h1>Coming soon</h1>
     </div>
 
