fixs scroll effect

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   
-  <div id="loader" class="spinner" >
+  <!-- <div id="loader" class="spinner" >
     
     <div></div>
     <div></div>
@@ -23,7 +23,7 @@
     <div></div>
     <div></div>
     <div></div>
-    </div>
+    </div> -->
   <div id="website">
   <nav class="navbar">
     <div class="letter-d" style="width: 50px; padding-left: 2%; cursor: pointer;" onclick="location.reload()" >
