--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div class="about-me-content hidden">
       <h1>About me</h1>
       <br>
-      <p>I enjoy creating things, whether it's drawings, websites, or food recipes.
+      <p>I enjoy creating things, whether it's drawings, websites, or cooking.
         Recently,
         One of my hobbies is web development and I started working on small website projects. I found it
         to be
