--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Devin's Porfolio</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css"> 
+  <link rel="icon" href="/images/White_Globe_Icon.png">
   <script src="script.js" defer></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
@@ -15,23 +16,13 @@
 
 <body>
   
-  <!-- <div id="loader" class="spinner" >
-    
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    </div> -->
   <div id="website">
   <nav class="navbar">
     <div class="letter-d" style="width: 50px; padding-left: 2%; cursor: pointer;" onclick="location.reload()" >
       <span>D</span>
     </div>
-    <!-- <img src="./images/White_Globe_Icon.png" style="width: 50px; padding-left: 2%; cursor: pointer;"
-      onclick="location.reload()" alt=""> -->
-      
+  
+
     <ul class="nav-list"  id="navbar">
       <li class="nav-item" onclick="scrollBy100vh()"><a href="#">01. About</a></li>
       <li class="nav-item" onclick="sendEmail()"><a href="#">02. Contact</a></li>
@@ -63,7 +54,7 @@
         onclick="scrollBy200vh()">apps</span>.</p>
 
 
-    <button class="animate-button" onclick="scrollBy200vh()">Check out my projects</button>
+    <button class="animate-button" onclick="scrollBy200vh()">Check out my projects <i class="fa-solid fa-arrow-turn-down"></i></button>
   </div>
 
 <div class="about-me-container">
