--- a/index.html
+++ b/index.html
@@ -164,8 +164,14 @@
       </a>
     </div>
 
-    <div class="card hidden2" data-tooltip="This is a tooltip">
-      <h1>Coming soon</h1>
+    <div class="card hidden2" data-tooltip="Business website">
+      <a href="https://decorativoslp.com/" target="_blank">
+        <div class="card-description">
+          <img src="./images/lp-website-logo.png">
+
+          <p>Website design project for a client in the metal industry.</p>
+        </div>
+      </a>
     </div>
 
     <div class="card hidden2" data-tooltip="This is a tooltip">
